--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,7 +11,7 @@ $siemensGreen: #248887;
 
 // sidebar
 $menuText:#bfcbd9;
-$menuActiveText:#409EFF;
+$menuActiveText:#2A9A30;
 $subMenuActiveText:#f4f4f5; // https://github.com/ElemeFE/element/issues/12951
 
 $menuBg:#304156;
