--- a/src/styles/element-variables.scss
+++ b/src/styles/element-variables.scss
@@ -5,7 +5,7 @@
 
 /* theme color */
 $--color-primary: #2A9A30;
-$--color-success: #1890ff;
+$--color-success: #13ce66;
 $--color-warning: #FFBA00;
 $--color-danger: #ff4949;
 //$--color-info: #1E1E1E;
